--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: 人・ロボット協調に向けたロボティクス
+title: 人間機械協調に向けたロボット工学
 author: Shunki Itadera
 logo: logo.png
 
